# rcce2-mythic

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  ReadMe.md  compile.bat  compile.sh  publish.bat  publish.sh  test.bat  test.sh
.claude/: INTENT.md
.claude/skills/blitzforge-language/: SKILL.md
.claude/skills/rcce2-bvm-command/: SKILL.md
.claude/skills/rcce2-packet-handler/: SKILL.md
.claude/skills/rcce2-test-writing/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
client-rs/: Cargo.toml
client-rs/crates/enet-sys/: Cargo.toml  build.rs
client-rs/crates/enet-sys/src/: lib.rs  transport.rs
client-rs/crates/rcce-client/: Cargo.toml
client-rs/crates/rcce-client/src/: assets.rs  audio.rs  daynight.rs  fetch.rs  floaters.rs  lib.rs  login.rs  main.rs  net.rs  particles.rs  radar.rs  terrain.rs  trade.rs  weather.rs  world.rs
client-rs/crates/rcce-client/tests/: malformed_input.rs
client-rs/crates/rcce-data/: Cargo.toml
client-rs/crates/rcce-data/src/: actors.rs  anim.rs  area.rs  attributes.rs  b3d.rs  catalog.rs  damage.rs  emitter.rs  fixed_attributes.rs  interface.rs  items.rs  language.rs  lib.rs  money.rs  other.rs  reader.rs  suns.rs  texture.rs
client-rs/crates/rcce-data/tests/: malformed_input.rs
client-rs/crates/rcce-net/: Cargo.toml
client-rs/crates/rcce-net/src/: auth.rs  codec.rs  lib.rs  transport.rs
client-rs/crates/rcce-net/tests/: malformed_input.rs
client-rs/crates/rcce-render/: Cargo.toml
client-rs/crates/rcce-render/src/: bloom.rs  font.rs  gpu.rs  lib.rs  overlay.rs  render.rs  render3d.rs  scene.rs  world_view.rs
client-rs/crates/rcenet-ffi-probe/: Cargo.toml
client-rs/crates/rcenet-ffi-probe/src/: lib.rs  main.rs
data/Areas/Radar/: FighterGuy-Plains.rdr  Hoss-Dungeon.rdr  Hoss-Plains.rdr
data/Emitter Configs/: BuffBlue.rpc  BuffGreen.rpc  BuffPurple.rpc  BuffRed.rpc  Fireball.rpc  HealthSpell.rpc  arcaneCasting.rpc  blast.rpc  divineCasting.rpc  flameBurst.rpc  frostBurst.rpc  healBurst.rpc  shockBurst.rpc  slam.rpc  weaponhit.rpc
data/Game Data/: Animations_debug.txt  Help.txt  Language.txt
data/Meshes/Buildings/: Bridge.b3d  Daub.dds  FeatureGrass.dds  FloorTiled.dds  NewCobble.dds  VillageBuildingC.b3d  WindmillSail.dds  WindowB.dds  building3.b3d  building5.b3d  castlepack_two_building1.b3d  hw10_01_01.dds  hw10_01_02.dds  p00_ivyy_s_002.tga  p00_meta_s_002.tga  p01_sign_s_01.dds  p01_sign_s_02.tga  s00_snow_w_01.tga  s00_swal_s_001.tga  s00_swal_s_001_snow.tga  s00_swal_s_002.tga  s00_swal_s_003.tga  s00_swal_w_002.TGA  s00_wood_s_010.tga  s00_wood_w_019.TGA  s01_albr_s_01.tga  s01_bord_s_001.tga  s01_bwal_s_046.tga  s01_bwal_s_047.tga  s01_bwal_s_048.tga  s01_bwal_s_060.tga  s01_bwal_s_069.tga  s01_cwal_s_033.tga  s01_cwal_s_035.tga  s01_grrf_s_01.tga  s01_grwl_b_07.tga  s01_grwl_s_06.tga  s01_grwl_s_07.tga  s01_iwal_s_001.tga  s01_roof_s_003.tga  (+17 more)
data/Meshes/RCTE/: Dale.b3d  Morgansfort.b3d  TestGround.b3d
data/Server Data/: Items_debug.txt  Language.txt  MySQL.dat.example  Spells_debug.txt
data/Server Data/Scripts/: Attack.rsl  BossLoot.rsl  Click_Chest.rsl  Click_Merchant.rsl  Click_ShrineKeeper.rsl  Click_ShrineOracle.rsl  Click_Test.rsl  Click_TestQuest.rsl  Click_Trainer.rsl  Click_WoundedScout.rsl  CommonFunc.rsl  Death.rsl  Default.rsl  DismantleItem.rsl  EnchantItem.rsl  Equip Change.rsl  FreeAttack.rsl  In-game Commands.rsl  Init_OrcWarlord.rsl  Init_Priest.rsl  Init_RatCatcher.rsl  Init_Shopkeeper.rsl  Init_ShrineKeeper.rsl  Init_ShrineOracle.rsl  Init_SpellTrainer.rsl  (+44 more)
docs/: UPDATE-CHANNEL-HARDENING.md  bvm-reference.md  index.md  macos-apple-silicon.md  reference.md  sample-project-guide.md  start.md
docs/loom/: README.md  architecture.md  roadmap.md
docs/modules/: accountsserver.md  actors.md  gameserver.md  interface.md  inventories.md  items.md  language.md  logging.md  md5.md  media.md  mediadialogs.md  mysql.md  packets.md  projectiles.md  projectiles3d.md  radar.md  rctrees.md  rottparticles.md  scripting.md  scriptingcommands.md  serverareas.md  servernet.md  spells.md
docs/protocol/: encoding.md  handler-conventions.md  index.md
docs/rust-client/: ACCEPTANCE.md  DELTA.md  PLAN.md  graphics-parity.md
docs/scripting/: language.md
scripts/: bootstrap_macos.sh  compiler.bat  gen_bvm_reference.sh  gen_packet_index.sh  gfxprobe_loop.ps1  submodules_init.bat
src/: Client.bb  GUE.bb  Loom.bb  Project Manager.bb  RC_Standard.bcs  Server.bb  UpdateServer.php
src/Modules/: AccountsServer.bb  Actors.bb  Actors3D.bb  Animations.bb  AreaLoader.bb  CharacterEditorLoader.bb  ClientAreas.bb  ClientAreasTE.bb  ClientAreas_FE.bb  ClientCombat.bb  ClientLoaders.bb  ClientNet.bb  Environment.bb  Environment3D.bb  F-UI.bb  FastExt.bb  GameServer.bb  Gooey.bb  Gooey_3D_Text.bb  Interface.bb  Interface3D.bb  Inventories.bb  Items.bb  Language.bb  Logging.bb  MainMenu.bb  Media.bb  MediaImport.bb  MySQL.bb  Packets.bb  PasswordHash.bb  Path.bb  Projectiles.bb  Projectiles3D.bb  RCEnet.bb  RC_Standard_Invoker.bb  Radar.bb  RottParticles.bb  Scripting.bb  ScriptingCommands.bb  (+8 more)
src/Tests/: ExampleTest.bb  ShadowTest.bb
src/Tools/: Gubbin Tool.bb  RC Architect.BB  RC Caves Editor.BB  RC Rock Editor.bb  RC Terrain Editor.bb  RC Tree Editor.BB
tools/projectgen/: PLAN.md  README.md  add_actors.py  add_faith_armor_spell.py  add_items.py  add_orc_warlord.py  add_projectiles.py  add_sounds.py  add_soundzones.py  add_spawns.py  add_spells.py  add_weather.py  animsets.py  audit_calls.py  audit_item_obtainability.py  audit_media_refs.py  audit_meshes.py  audit_privileges.py  b3dinspect.py  b3dtex.py  bisect_sound_off.py  develop_shrine.py  disable_test_monsters.py  enable_rat.py  fix_orc_to_human.py  fix_plains_portals.py  fix_troll_texture.py  fix_zero_anims.py  import_troll.py  make_wav_test.py  name_npcs.py  place_npc.py  polish_fireball_desc.py  rcdata.py  rcproject.py  relocate_marriage_npc.py  restore_safe_sound.py  restore_troll_mesh.py  set_actor_sounds.py  set_loot.py  (+10 more)
(+403 files in other folders)
