[workspace]
resolver = "2"
members = [
    "crates/rcce-data",
    "crates/rcce-net",
    "crates/rcenet-ffi-probe",
    "crates/rcce-client",
    "crates/rcce-render",
    "crates/enet-sys",
]

# Phase plan (see docs/rust-client/PLAN.md):
#   rcce-data   — pure on-disk format parsers (.dat catalogs, B3D, area, saves)   [Phase 1, current]
#   rcce-net    — wire protocol codec + RCEnet.dll FFI transport, swappable        [Phase 0/5]
#   rcce-render — wgpu renderer (mesh/skeletal/particles/fog/RTT)                  [Phase 2+]
#   rcce-ui     — custom-draw 2D UI (Gooey parity)                                 [Phase 2+]
#   rcce-world  — zone/actor/animation/environment state                          [Phase 2+]
#   rcce-audio  — rodio over OGG                                                   [Phase 3+]
#   client      — binary, drop-in Client.exe                                       [Phase 6]
# Crates are added to `members` as each phase begins so the workspace always builds.

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.85"

# Shared lint policy (members opt in with `[lints] workspace = true`). The CI
# clippy gate runs with `-D warnings`, so anything not allowed here fails the
# build. These three are allowed deliberately — they fight idiomatic code in a
# graphics + binary-parser codebase without catching real bugs:
#   too_many_arguments      — wgpu render/pipeline builders and the SceneInstance
#                             draw path legitimately take many params.
#   type_complexity         — parser return tuples and wgpu resource bundles.
#   field_reassign_with_default — sequential `.dat`/B3D stream parsers read fields
#                             in wire order (sometimes with mid-stream discards),
#                             which is far clearer as ordered statements than a
#                             giant struct initializer.
# Everything else (correctness, perf, suspicious, the default style lints) stays
# denied — this gate already caught two correctness bugs (a dead `|| true`
# predicate and an approximate-TAU literal).
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
field_reassign_with_default = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
