[package]
name = "enet-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FFI to the RCCE2 ENet fork, compiled from vendored C source (vendor/) via cc. Byte-identical to the server's RCEnet.dll, so wire-compatible by construction — and 64-bit + cross-platform (vendor/unix.c covers Linux/macOS)."
links = "rcenet_c"

[build-dependencies]
cc = "1"

[[bin]]
name = "enet-smoke"
path = "src/bin/enet_smoke.rs"
