[package]
name = "rcce-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "RCCE2 game client (drop-in Client.exe replacement) — state model, login, main loop."

# Built for i686-pc-windows-msvc while the transport is FFI to the 32-bit
# RCEnet.dll. Goes 64-bit once a fork-matched pure-Rust ENet lands.

[dependencies]
rcce-net = { path = "../rcce-net", default-features = false }
rcenet-ffi-probe = { path = "../rcenet-ffi-probe" }

[lib]
name = "rcce_client"
path = "src/lib.rs"

[[bin]]
name = "rcce-client"
path = "src/main.rs"
