[package]
name = "rcce-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wgpu renderer for the RCCE2 client. Headless-capable (offscreen → PNG) for autonomous verification."

# Must build for i686-pc-windows-msvc (the client is 32-bit while the transport
# is FFI to RCEnet.dll). This crate's first job is to PROVE wgpu works there.

[dependencies]
wgpu = "22"
pollster = "0.3"
# PNG export + render deps added when the offscreen renderer lands. (image 0.25.10
# needs rustc 1.88; we're on 1.85 — pin a compatible version or use `png` directly.)

[[bin]]
name = "gpu-probe"
path = "src/bin/gpu_probe.rs"
