[package]
name = "rcce-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wgpu renderer for the RCCE2 client. Headless-capable (offscreen → PNG) for autonomous verification."

# Must build for i686-pc-windows-msvc (the client is 32-bit while the transport
# is FFI to RCEnet.dll). This crate's first job is to PROVE wgpu works there.

[dependencies]
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
png = "0.17"  # lightweight PNG encoder (1.85-compatible, unlike image 0.25.10)
glam = "0.29" # matrix/vector math for the 3D camera
rcce-data = { path = "../rcce-data" }

[[bin]]
name = "model-view"
path = "src/bin/model_view.rs"

[[bin]]
name = "gpu-probe"
path = "src/bin/gpu_probe.rs"

[lints]
workspace = true
